# GameEngineRuntime

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md
.github/workflows/: ci.yml  nightly.yml
_2d/: ger_2d.lib  package.json
_2d/source/engine2d/: sprite.d
_api/: ger_api.lib  package.json
_api/source/api/: ger_app.d  ger_input.d  ger_script.d  ger_types.d  ger_window.d
_core/include/core/: core_file.h  core_input.h  core_log.h  core_memory.h  core_platform.h
_core/src/: core_log.c  core_memory.c
_core/src/win32/: core_input.c  core_window.c
_engine/: CMakeLists.txt
_engine/include/engine/: render_graph.hpp  wgpu_buffer.hpp  wgpu_shader.hpp  wgpu_swapchain.hpp
_engine/src/: render_graph.cpp  wgpu_context.cpp  wgpu_swapchain.cpp
_lua_host/: CMakeLists.txt
_lua_host/src/: lua_bindings.c
_runtime/: package.json
api/: package.json
api/source/api/: ger_2d.d  ger_asset.d  ger_audio.d  ger_ecs.d  ger_graphics.d  ger_math.d  ger_scene.d  ger_script.d
api/source/api/internal/: lua_bridge.d  wgpu_bridge.d
core/: CMakeLists.txt
core/include/core/: core_thread.h  core_time.h  core_window.h
core/src/: core_file.c  core_memory.c  core_thread.c  core_time.c
core/src/linux/: core_window.c
core/src/macos/: core_window.c
core/src/win32/: core_input.c  core_window.c
docs/: performance.md
engine/: CMakeLists.txt
engine/include/engine/: gpu_profiler.hpp  math_simd.hpp  render_graph.hpp  wgpu_context.hpp  wgpu_pipeline.hpp  wgpu_proc_table.hpp  wgpu_texture.hpp
engine/src/: gpu_profiler.cpp  math_simd.cpp  render_graph.cpp  wgpu_pipeline.cpp  wgpu_proc_table.cpp  wgpu_shader.cpp  wgpu_texture.cpp
engine2d/: package.json
engine2d/source/engine2d/: animation.d  camera.d  collision.d  debug_render.d  layer.d  package.d  particle.d  sprite.d  text.d  tilemap.d
examples/01_clear_screen/: README.md  package.json
examples/01_clear_screen/source/: app.d
lua_host/: CMakeLists.txt
lua_host/include/lua_host/: lua_bindings.h  lua_host.h  lua_serializer.h
lua_host/src/: lua_bindings.c  lua_host.c  lua_serializer.c
runtime/: package.json
runtime/assets/scripts/: main.lua
runtime/assets/shaders/: sprite.vert.wgsl
runtime/source/: app.d
tests/: CMakeLists.txt  core_tests.c  render_graph_tests.cpp
tools/: pack_assets.py  shader_compiler.py
